# PasswordManager

./: Cargo.toml  test.csv  worker.err  worker.out
extention/: background.js  content.js  manifest.json  popup.css  popup.html  popup.js
src/: background.rs  cli.rs  client.rs  clpboard.rs  config.rs  encryption.rs  file.rs  files.rs  main.rs  password.rs  server.rs  types.rs  vault.rs
